Prevent images from being cropped

--- a/css/blog.css
+++ b/css/blog.css
@@ -33,7 +33,7 @@ button {
     display: flex;
     margin: auto;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: normal;
     padding-top: 1em;
     justify-content: space-evenly;
 }
