--- a/css/desktop.css
+++ b/css/desktop.css
@@ -48,7 +48,6 @@ nav {
     min-width: 300px;
     max-width: 400px;
     min-height: 550px;
-    height: 650px;
     margin-right: .5em;
     margin-left: .5em;
 
